--- a/11785/Quiz/q1/q1.ipynb
+++ b/11785/Quiz/q1/q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,7 @@
     "        for i in range(4):\n",
     "            t = phi(W1 * l1[i] + W2 * l2[i] + b)\n",
     "            y = O[i]\n",
+    "#             print(y-t)\n",
     "            W1 += eta*l1[i]*(y-t)\n",
     "            W2 += eta*l2[i]*(y-t)\n",
     "            b += eta*(y-t)\n",
@@ -51,6 +52,7 @@
     "            i = 3-j\n",
     "            t = phi(W1 * l1[i] + W2 * l2[i] + b)\n",
     "            y = O[i]\n",
+    "#             print(y-t)\n",
     "            W1 += eta*l1[i]*(y-t)\n",
     "            W2 += eta*l2[i]*(y-t)\n",
     "            b += eta*(y-t)\n",
@@ -69,10 +71,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 0.0,\n",
+       " -0.01,\n",
+       " 0.0,\n",
+       " -0.01,\n",
+       " 0.0,\n",
+       " -0.01,\n",
+       " -0.01,\n",
+       " -0.02,\n",
+       " -0.01,\n",
+       " -0.02,\n",
+       " -0.01,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02,\n",
+       " -0.02]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W2list"
+   ]
   },
   {
    "cell_type": "code",
@@ -112,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
