--- a/11785/Quiz/q1/q2.ipynb
+++ b/11785/Quiz/q1/q2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
-      "100\n"
+      "9.99999999999998\n",
+      "9.99999999999998\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
     "b=0\n",
     "\n",
     "num_epoch = 100\n",
-    "eta = 1\n",
+    "eta = 0.1\n",
     "\n",
     "W1list = [W1]\n",
     "W2list = [W2]\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -84,13 +84,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0000000000000007\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Hebbian\n",
-    "l1 = [1, 0]\n",
-    "l2 = [1, 1]\n",
+    "l1 = [1, 1]\n",
+    "l2 = [0, 1]\n",
     "O = [1, 0]\n",
     "\n",
     "W1 = 0\n",
@@ -98,7 +107,7 @@
     "\n",
     "\n",
     "num_epoch = 100\n",
-    "eta = 0.1\n",
+    "eta = 0.01\n",
     "\n",
     "W1list = [W1]\n",
     "W2list = [W2]\n",
@@ -123,12 +132,14 @@
     "            W2 += eta*l2[i]*y\n",
     "\n",
     "    W1list.append(W1)\n",
-    "    W2list.append(W2)"
+    "    W2list.append(W2)\n",
+    "print(W1)\n",
+    "print(W2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -136,18 +147,25 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1\n",
+      "0\n",
       "1\n",
       "1\n"
      ]
     }
    ],
    "source": [
-    "print(phi(W1*0 + W2*0 + b))\n",
-    "print(phi(W1*1 + W2*0 + b))\n",
-    "print(phi(W1*0 + W2*1 + b))\n",
-    "print(phi(W1*1 + W2*1 + b))"
+    "print(phi(W1*0 + W2*0))\n",
+    "print(phi(W1*0 + W2*1))\n",
+    "print(phi(W1*1 + W2*0))\n",
+    "print(phi(W1*1 + W2*1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -173,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
