--- a/11785/Homework/hw1/hw1.ipynb
+++ b/11785/Homework/hw1/hw1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "       [79]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "        3.67879441e-01, 1.00000000e+00]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "        0.125]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "       -0.00425939, -0.00425939, -0.00425939])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "        -1.88645006e+02]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,6 +424,198 @@
     "W = np.random.randn(10,16)\n",
     "b = np.random.randn(16)\n",
     "np.dot(x,W) + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_feature = 10\n",
+    "out_feature = 16\n",
+    "batch_size = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dw = np.zeros((in_feature, out_feature))\n",
+    "print(dw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "delta = np.random.randn(batch_size, out_feature)\n",
+    "print(delta.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 10)\n",
+      "(10, 16)\n",
+      "(1, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dx = np.dot(delta, np.transpose(W))\n",
+    "print(dx.shape)\n",
+    "dW = np.dot(np.transpose(x), delta)\n",
+    "print(dW.shape)\n",
+    "db = np.dot(np.ones((1,len(x))), delta)\n",
+    "print(db.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dW.fill(0.0)\n",
+    "print(dW)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 16, 32, 64]\n",
+      "[4, 8, 16, 32, 64, 3]\n",
+      "4 8\n",
+      "8 16\n",
+      "16 32\n",
+      "32 64\n",
+      "64 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_size = 4\n",
+    "output_size = 3\n",
+    "hiddens = [8,16,32,64]\n",
+    "layers = hiddens.copy()\n",
+    "layers.insert(0,input_size)\n",
+    "layers.append(output_size)\n",
+    "print(hiddens)\n",
+    "print(layers)\n",
+    "for d1, d2 in zip(layers[:-1],layers[1:]):\n",
+    "    print(d1,d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_bn_layers = 2\n",
+    "bn_layers = [d1 for d1 in hiddens[:num_bn_layers]]\n",
+    "print(bn_layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0,  -1,  -2,  -3,  -4,  -5,  -6,  -7,  -8,  -9],\n",
+       "       [-10, -11, -12, -13, -14, -15, -16, -17, -18, -19],\n",
+       "       [-20, -21, -22, -23, -24, -25, -26, -27, -28, -29],\n",
+       "       [-30, -31, -32, -33, -34, -35, -36, -37, -38, -39],\n",
+       "       [-40, -41, -42, -43, -44, -45, -46, -47, -48, -49],\n",
+       "       [-50, -51, -52, -53, -54, -55, -56, -57, -58, -59],\n",
+       "       [-60, -61, -62, -63, -64, -65, -66, -67, -68, -69],\n",
+       "       [-70, -71, -72, -73, -74, -75, -76, -77, -78, -79]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-x"
    ]
   },
   {
